Add additional modules

--- a/css/style.scss
+++ b/css/style.scss
@@ -9,6 +9,7 @@ body {
     font-family: 'Overpass', sans-serif;
 }
 .artist {
+    display: flex; 
     font-family: 'Permanent Marker', cursive;
     font-size: 30px;
 }
